# imogen

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AddLemons.cmake  CMakeLists.txt  CMakePresets.json  Imogen.jucer  LICENSE.md  README.md  SOURCE_OVERVIEW.md  WORKS_CITED.md  _clang-format  _clang_format  imogen_build_script.sh  imogen_test_script.sh  install_linux_deps.sh
.github/: FUNDING.yml  SPONSOR.yml
.github/workflow/: buildReleaseOnPush.yml
.github/workflows/: Build.yml  LV2_build.yml  RepoMaintenance.yml  UpdateGitSubmodules.yml  all-build.yml  autoBuild.yml  autoBuildOnPush.yml  build-LV2.yml  buildReleaseOnPush.yml  buildiOS.yml  checkForDeadLinks.yml  codeScanning.yml  codeql-analysis.yml  iOS_build.yml  main-build.yml  plugin-build.yml  remote_app_build.yml  repoMaintenence.yml  scanCodeQuality.yml  stale.yml  testOtherArchitectures.yml  todo-issues.yml  updateGitSubmodules.yml
CMake/: FindShared-code.cmake
ElkOS-port/: CMakeLists.txt  config_imogen.json  imogen_build_elkOS.sh
Imogen-Remote/: CMakeLists.txt  imogenRemote_build_desktop.sh  imogenRemote_build_iOS.sh
Imogen-Remote/Remote_Source/: Main.cpp
Imogen-Remote/Source/: GuiHandler.h  Main.cpp  MainComponent.cpp  MainComponent.h  OSC_parser.h
Imogen-Remote/scripts/: imogenRemote_build_desktop.sh  imogenRemote_build_iOS.sh
Source/: DelayBuffer.h  DspUtils.h  Duplicator.h  EngineWithEnsuredInternalBlocksize.cpp  EngineWithEnsuredInternalBlocksize.h  EpochExtractor.h  FloatFFT.h  GeneralUtils.h  GlobalDefinitions.h  Harmonizer.cpp  Harmonizer.h  HarmonyVoice.h  ImogenCommon.h  ImogenEngine.cpp  ImogenEngine.h  ImogenGuiHolder.h  ImogenParameters.h  ImogenRecieverAPI.h  InputAnalysis.cpp  InputAnalysis.h  MidiLatchManager.h  MidiPanningManager.h  MidiProcessor.h  Panner.h  PanningManager.cpp  PanningManager.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PolyphonyVoiceManager.h  RingBuffer.h  VoiceStealingManager.h  Window.h  Yin.h  alternateInputModes.h  cmakeUtilityFunctions.cmake  imogenConfig.cmake  (+4 more)
Source/ApplicationBases/ElkOS/: main_app
Source/ApplicationBases/Plugin_StandaloneWrapper/: StandaloneWrapper.cpp  StandaloneWrapper.h
Source/ApplicationBases/Remote/: Main.cpp
Source/CMake/: cmakeDefinitions.cmake  cmakeUnsetVariables.cmake  cmakeUtilityFunctions.cmake
Source/Common/: ImogenCommon.h  ImogenParameters.h  ImogenState.h
Source/DSP/: ImogenEngine.cpp  ImogenEngine.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/Harmonizer/: Harmonizer.cpp  Harmonizer.h  HarmonizerVoice.cpp  HarmonizerVoice.h
Source/DSP/HarmonizerDSP/: Harmonizer.cpp  Harmonizer.h  HarmonizerMidi.cpp  HarmonizerUtilities.h  HarmonizerVoice.cpp
Source/DSP/ImogenEngine/: ImogenEngine.cpp  ImogenEngine.h
Source/DSP/PitchDetector/: PitchDetector.cpp  PitchDetector.h
Source/DSP/PluginProcessor/: PluginProcessor.cpp  PluginProcessor.h  PluginProcessorParameters.cpp  PluginProcessorState.cpp
Source/DSP/Utils/: DelayBuffer.h  FancyMidiBuffer.h  GeneralUtils.h  Panner.h
Source/ElkOS/: config_imogen.json  elk_ui.py  main_app  run_instrument  stop
Source/Freezer/: Freezer.cpp  Freezer.h
Source/GUI/: EnableSidechainWarning.h  GUI_Framework.h  GuiHandle.h  ImogenGUI.cpp  ImogenGUI.h  ImogenGuiHolder.h  LookAndFeel.h  ParameterFetcher.h  PluginEditor.cpp  PluginEditor.h  touchOnceAndForgetSettingsPanel.h
Source/Graphics/: EnableSidechainWarning.h  HelpScreen.cpp  HelpScreen.h  IOControlPanel.cpp  IOControlPanel.h  LimiterControlPanel.h  LookAndFeel.h  MidiControlPanel.cpp  MidiControlPanel.h  StaffDisplay.cpp  StaffDisplay.h
Source/HarmonizerDSP/: FancyMidiBuffer.h  Harmonizer.cpp  Harmonizer.h  HarmonizerMidi.cpp  HarmonizerUtilities.h  HarmonizerVoice.cpp  InputAnalysis.cpp  InputAnalysis.h  MidiUtilities.h  PanningManager.cpp  PanningManager.h  PeakExtraction.cpp  WaveletGenerator.h
Source/ImogenCommon/: ImogenCommon.cpp  ImogenCommon.h  ImogenParameters.h  Internals.h  Meters.h  Parameters.h
Source/Midi/: MidiLatchManager.h  MidiPanningManager.h  MidiProcessor.h  PolyphonyVoiceManager.h  VoiceStealingManager.h
Source/OSC/: OSC.h  OSC_reciever.h  OSC_sender.h
Source/PitchDetector/: PitchDetector.cpp  PitchDetector.h
Source/PluginProcessor/: PluginProcessor.cpp  PluginProcessor.h  PluginProcessorEvents.cpp  PluginProcessorNetworking.cpp  PluginProcessorParameters.cpp  PluginProcessorState.cpp
Source/PluginSources/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorParameters.cpp  PluginProcessorState.cpp
Source/Remote/: Main.cpp  OSC_parser.h
Source/StandaloneWrapper/: StandaloneWrapper.cpp  StandaloneWrapper.h
Source/Tests/: HarmonizerTests.cpp  HarmonizerVoiceTests.cpp  tests.cpp
Source/Utils/: DelayBuffer.h  Panner.h  RangeWrappedInt.h
Source/bv_GeneralUtils/: DelayBuffer.h  FancyMidiBuffer.h  Panner.h  bv_GeneralUtils.h
Source/bv_Harmonizer/: bv_Harmonizer.cpp  bv_Harmonizer.h  bv_HarmonizerMidi.cpp  bv_HarmonizerUtilities.h  bv_HarmonizerVoice.cpp
Source/bv_ImogenEngine/: bv_ImogenEngine.cpp  bv_ImogenEngine.h
Source/bv_PitchDetector/: bv_PitchDetector.h
Source/bv_SharedCode/: bv_SharedCode.h
Source/modules/: CMakeLists.txt
Source/plugin/: Main.cpp  PluginProcessor.cpp  PluginProcessor.h
Source/remote_app/: Main.cpp  MainComponent.cpp  MainComponent.h
assets/baked-in-presets/: list_of_ideas.txt
assets/translation-files/: needed-phrases.txt
assets/translations/: trans_Arabic.txt  trans_French.txt  trans_German.txt  trans_Hindi.txt  trans_Italian.txt  trans_Japanese.txt  trans_Korean.txt  trans_Polish.txt  trans_Portuguese.txt  trans_Russian.txt  trans_Spanish.txt  trans_Thai.txt
docs/: works_cited.md
scripts/: CPM.cmake  FindShared-code.cmake  build_LV2.sh  build_ios.sh  get_cpm.cmake  get_shared_code.cmake  imogen_build_Android.sh  imogen_build_LV2.sh  imogen_build_iOS.sh  imogen_build_script.sh  imogen_install_Linux_deps.sh  imogen_test_script.sh
(+251 files in other folders)
